Fix alignment of state labels in the bootable volume list
1. rely on component level styling (FlexLayout)
2. separate remaining styling from template list to avoid future
   regressions
3. use compact label styling for all state labels

--- a/src/views/catalog/CreateFromInstanceTypes/components/BootableVolumeList/BootableVolumeList.scss
+++ b/src/views/catalog/CreateFromInstanceTypes/components/BootableVolumeList/BootableVolumeList.scss
@@ -19,3 +19,8 @@
     }
   }
 }
+
+.bootable-volume-row-icon {
+  width: var(--pf-t--global--spacer--xl);
+  vertical-align: bottom;
+}
